# CFD

./: .gitattributes  .gitignore  .project  CFD.cabal
.dist-buildwrapper/: CFD.cabal
.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage  Main.hs
src/: CalculusUtils.hi  CalculusUtils.hs  GeometryStuff.hi  GeometryStuff.hs  Main.hs  Main.prof  SolutionDomain.hi  SolutionDomain.hs  compile and run.bat  main.hi  old test.txt  tderr  test.txt  testingGnuSettings.txt
