name:           CFD
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Administrator

executable CFD
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

library 
  build-depends:   
                   containers >=0.5 && <0.6,
                   unordered-containers >=0.2 && <0.3
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules: Main
  other-modules:   Main

